--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-<!--    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />-->
+   <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../static/main.css" />
     {% block meta %} {% endblock %}
   </head>
